# hazmat-erg-app

./: README.md  package.json
.github/workflows/: build-windows.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
